--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 홈</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
-<body class="bg-gray-100">
+<body class="bg-light">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
@@ -22,7 +21,7 @@
   </nav>
 
   <div class="container pt-5 mt-5">
-    <h1 class="text-center my-5 text-3xl font-bold text-blue-700">진행 중인 구조 프로젝트</h1>
+    <h1 class="text-center my-5 text-3xl fw-bold text-primary">진행 중인 구조 프로젝트</h1>
     <div class="row" id="projectContainer"></div>
   </div>
 
@@ -38,33 +37,39 @@
 
       projects.forEach(project => {
         const col = document.createElement("div");
-        col.className = "col-md-6 col-lg-4 mb-4";
+        col.className = "col-md-6 col-lg-6 mb-4";
 
         const card = document.createElement("div");
-        card.className = "card h-100 shadow-sm";
+        card.className = "d-flex flex-row align-items-center border rounded shadow-sm p-3 bg-white h-100";
         card.style.cursor = "pointer";
         card.onclick = () => {
           window.location.href = `project.html?id=${project.id}`;
         };
 
-        const img = document.createElement("img");
-        img.className = "card-img-top";
-        img.src = project.representativeImage || "https://placekitten.com/400/250";
-        img.alt = "대표 이미지";
-
-        const body = document.createElement("div");
-        body.className = "card-body";
-        body.innerHTML = `
-          <h5 class="card-title">${project.name || "이름 없음"}</h5>
-          <p class="card-text">${project.situation || "상황 설명 없음"}</p>
-          <ul class="list-unstyled small">
-            <li><strong>목표:</strong> ${project.goalAmount || 0}원</li>
-            <li><strong>구조자 부담:</strong> ${project.ownerAmount || 0}원</li>
-          </ul>
+        const imageWrapper = document.createElement("div");
+        imageWrapper.className = "flex-shrink-0 me-3";
+        imageWrapper.innerHTML = `
+          <img src="${project.representativeImage || 'https://placekitten.com/300/200'}" alt="대표 이미지" class="rounded" style="width: 140px; height: 100px; object-fit: cover;">
         `;
 
-        card.appendChild(img);
-        card.appendChild(body);
+        const contentWrapper = document.createElement("div");
+        contentWrapper.className = "flex-grow-1";
+        contentWrapper.innerHTML = `
+          <h5 class="fw-bold mb-1">${project.name}</h5>
+          <p class="text-muted small mb-2">${project.situation}</p>
+          <ul class="list-unstyled small mb-2">
+            <li><strong>목표:</strong> ${project.goalAmount}원</li>
+            <li><strong>현황:</strong> ${project.currentAmount || 0}원</li>
+            <li><strong>구조자 부담:</strong> ${project.ownerAmount || 0}원</li>
+          </ul>
+          <div class="d-flex gap-2">
+            <a href="${project.kakaoLink}" target="_blank" class="btn btn-sm btn-outline-warning rounded-pill">💬 카카오톡</a>
+            <button class="btn btn-sm btn-outline-primary rounded-pill" onclick="event.stopPropagation(); window.location.href='project.html?id=${project.id}'">🔎 상세보기</button>
+          </div>
+        `;
+
+        card.appendChild(imageWrapper);
+        card.appendChild(contentWrapper);
         col.appendChild(card);
         container.appendChild(col);
       });
