--- a/index.html
+++ b/index.html
@@ -1,63 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project.PAW - 홈</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Project.PAW — 법인 없는 첫 후원 플랫폼</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <style>
+    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
+    .hero { text-align:center; padding:100px 20px; background:linear-gradient(135deg,#fff 0%,#fef9f9 50%,#f5f7ff 100%); }
+    .hero h1 { font-size:2rem; font-weight:900; margin-bottom:14px; }
+    .hero p { font-size:1.1rem; color:#555; margin-bottom:20px; }
+    .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
+    .btn.primary { background:#111; color:#fff; }
+    .btn.secondary { background:#fff; border:1px solid #ddd; color:#111; }
+    .projects { max-width:1100px; margin:40px auto 0; padding:0 16px; }
+    .projects h2 { font-size:1.2rem; font-weight:800; margin-bottom:12px; }
+    .grid { display:grid; grid-template-columns: repeat( auto-fill, minmax(260px, 1fr) ); gap:14px; }
+    .card { display:block; background:#fff; border:1px solid #eee; border-radius:14px; overflow:hidden; text-decoration:none; color:inherit; }
+    .card img { width:100%; height:180px; object-fit:cover; background:#f3f3f3; }
+    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; padding:0 12px; }
+    .card .muted { color:#777; font-size:.9rem; padding:0 12px 10px; }
+    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
+  </style>
 </head>
 <body>
-  <!-- ✅ 기존 네비/디자인 구조는 그대로 둠 -->
-  <div id="header"></div>
+  <!-- 공통 헤더 -->
+  <div data-include="header"></div>
 
-  <main class="container my-5">
-    <h3 class="mb-4 fw-bold">진행 중인 구조 프로젝트</h3>
-    <div id="projectList" class="row g-3">
-      <!-- JS에서 카드 자동 렌더링 -->
+  <!-- Hero -->
+  <section class="hero">
+    <h1>법인 없는 첫 후원 플랫폼</h1>
+    <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
+       PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>을 통해 연결됩니다.</p>
+    <!-- 원본 링크 그대로 유지 -->
+    <a href="projects.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+    <a href="create.html" class="btn secondary">등록하기</a>
+  </section>
+
+  <!-- Projects -->
+  <section class="projects">
+    <h2>진행 중인 프로젝트</h2>
+    <div id="projects-grid" class="grid">
+      <div class="muted">불러오는 중...</div>
     </div>
-  </main>
+  </section>
 
-  <div id="footer"></div>
-
-  <script type="module">
-    import { db, collection, getDocs } from "./js/firebase.js";
-
-    async function loadProjects() {
-      const projectList = document.getElementById("projectList");
-      projectList.innerHTML = "";
-
-      try {
-        const snapshot = await getDocs(collection(db, "projects"));
-        snapshot.forEach(doc => {
-          const data = doc.data();
-
-          // ✅ mainImage 필드가 있으면 사용, 없으면 placeholder
-          const imageUrl = data.mainImage || "img/placeholder.svg";
-
-          const card = document.createElement("div");
-          card.className = "col-md-6 col-lg-4";
-
-          card.innerHTML = `
-            <div class="card h-100 shadow-sm">
-              <img src="${imageUrl}" class="card-img-top" alt="${data.name}" style="height:200px; object-fit:cover;">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">${data.name}</h5>
-                <p class="card-text text-muted">${data.situation}</p>
-                <p class="mb-2"><small>목표 금액: ${(data.goalAmount || 0).toLocaleString()} 원</small></p>
-                <a href="project.html?id=${doc.id}" class="btn btn-primary btn-sm mt-auto">상세보기</a>
-              </div>
-            </div>
-          `;
-          projectList.appendChild(card);
-        });
-      } catch (err) {
-        console.error("프로젝트 불러오기 실패:", err);
-        projectList.innerHTML = `<p class="text-danger">프로젝트를 불러오지 못했습니다.</p>`;
-      }
-    }
-
-    document.addEventListener("DOMContentLoaded", loadProjects);
-  </script>
-</body>
-</html>
+  <!-- 공통 푸터 -->
+  <div data-include="fo
