--- a/index.html
+++ b/index.html
@@ -14,37 +14,30 @@
     .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
     .btn.primary { background:#111; color:#fff; }
     .btn.secondary { background:#fff; border:1px solid #ddd; color:#111; }
-    .projects { max-width:1100px; margin:40px auto 0; padding:0 16px; }
-    .projects h2 { font-size:1.2rem; font-weight:800; margin-bottom:12px; }
-    .grid { display:grid; grid-template-columns: repeat( auto-fill, minmax(260px, 1fr) ); gap:14px; }
-    .card { display:block; background:#fff; border:1px solid #eee; border-radius:14px; overflow:hidden; text-decoration:none; color:inherit; }
-    .card img { width:100%; height:180px; object-fit:cover; background:#f3f3f3; }
-    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; padding:0 12px; }
-    .card .muted { color:#777; font-size:.9rem; padding:0 12px 10px; }
+    .projects { max-width:1040px; margin:50px auto; padding:0 16px; }
+    .projects h2 { font-size:1.4rem; font-weight:700; margin-bottom:16px; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px; }
+    .card { background:#fff; border:1px solid #eee; border-radius:14px; padding:14px; display:flex; flex-direction:column; gap:10px; transition:all .2s; }
+    .card:hover { box-shadow:0 4px 10px rgba(0,0,0,0.05); transform:translateY(-2px); }
+    .card img { width:100%; height:180px; object-fit:cover; border-radius:10px; }
+    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
+    .muted { color:#777; font-size:.9rem; }
     footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
   </style>
 </head>
 <body>
-  <!-- 공통 헤더 주입 -->
   <div data-include="header"></div>
 
-  <!-- 🔹 헤더/푸터 즉시 주입: 가장 먼저 실행 -->
-  <script type="module">
-    import { injectLayout } from './js/include.js';
-    injectLayout();
-  </script>
-
-  <!-- Hero Section (원본 그대로) -->
+  <!-- Hero Section -->
   <section class="hero">
     <h1>법인 없는 첫 후원 플랫폼</h1>
     <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
        PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>을 통해 연결됩니다.</p>
-    <!-- 원본 링크 유지 (projects.html 그대로) -->
-    <a href="projects.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+    <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
     <a href="create.html" class="btn secondary">등록하기</a>
   </section>
 
-  <!-- Projects Section (원본 그대로) -->
+  <!-- Projects Section -->
   <section class="projects">
     <h2>진행 중인 프로젝트</h2>
     <div id="projects-grid" class="grid">
@@ -52,22 +45,17 @@
     </div>
   </section>
 
-  <!-- 공통 푸터 주입 -->
   <div data-include="footer"></div>
 
-  <!-- 데이터 렌더 스크립트 (별도 모듈) -->
   <script type="module">
+    import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
 
-    const $grid = document.getElementById('projects-grid');
-    const fmt = (n) => Number(n||0).toLocaleString('ko-KR');
+    injectLayout({ active:'home' });
 
-    // ✅ 대표 이미지 필드 호환: representativeImageUrl → mainImage → images[0] → placeholder
-    const pickImage = (p) =>
-      p.representativeImageUrl ||
-      p.mainImage ||
-      (Array.isArray(p.images) && p.images[0]) ||
-      'img/placeholder.svg';
+    const $grid = document.getElementById('projects-grid');
+
+    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
     async function render(){
       try {
@@ -78,7 +66,7 @@
         }
         $grid.innerHTML = list.map(p => `
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <img src="${pickImage(p)}" alt=""/>
+            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" alt=""/>
             <h3>${p.name ?? '(이름 없음)'}</h3>
             <div class="muted">${p.summary ?? ''}</div>
             <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
