--- a/login.html
+++ b/login.html
@@ -3,33 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project.PAW - 로그인</title>
+  <title>Project.PAW - 메인</title>
   <link rel="stylesheet" href="styles.css">
-  <script type="module">
-    import { auth, signInWithEmailAndPassword, signOut } from "./js/firebase.js";
-
-    window.login = async () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-        alert("로그인 성공!");
-        location.href = "index.html";
-      } catch (e) {
-        alert("로그인 실패: " + e.message);
-      }
-    };
-
-    window.logout = async () => {
-      try {
-        await signOut(auth);
-        alert("로그아웃 완료!");
-        location.href = "index.html";
-      } catch (e) {
-        console.error("로그아웃 실패:", e);
-      }
-    };
-  </script>
   <style>
     body { margin: 0; font-family: "Noto Sans KR", sans-serif; background: #fff; color: #333; }
     header {
@@ -43,21 +18,44 @@
       font-size: 1rem; color: #333; text-decoration: none; transition: color 0.2s;
     }
     nav a:hover, nav button:hover { color: #ff6b6b; }
-    main { padding: 2rem; max-width: 400px; margin: auto; }
-    form {
-      display: flex; flex-direction: column; gap: 1rem;
-      padding: 2rem; background: #fafafa; border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+
+    main { padding: 2rem; max-width: 1024px; margin: auto; }
+    h2 { margin-bottom: 1rem; }
+
+    /* 프로젝트 카드 그리드 */
+    .grid {
+      display: grid;
+      gap: 16px;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     }
-    input {
-      padding: 0.8rem; border: 1px solid #ddd; border-radius: 8px; font-size: 1rem;
+    .project-card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 14px rgba(0,0,0,.05);
+      overflow: hidden;
+      transition: transform .15s;
     }
-    button {
-      padding: 0.8rem; background: #ff6b6b; border: none; border-radius: 8px;
-      font-size: 1rem; font-weight: bold; color: #fff; cursor: pointer;
-      transition: background 0.2s;
+    .project-card:hover { transform: translateY(-3px); }
+    .project-card img.thumb {
+      width: 100%; height: 160px; object-fit: cover;
     }
-    button:hover { background: #ff4c4c; }
+    .project-card h3 {
+      margin: 8px 12px 4px;
+      font-size: 1.1rem;
+      font-weight: 700;
+    }
+    .project-card p {
+      margin: 0 12px 12px;
+      color: #555;
+      font-size: 0.9rem;
+    }
+
+    footer {
+      margin-top: 3rem; padding: 2rem;
+      background:#fafafa; text-align:center; font-size:0.9rem; color:#666;
+    }
+    footer a { color:#666; text-decoration:none; margin:0 4px; }
+    footer a:hover { color:#ff6b6b; }
   </style>
 </head>
 <body>
@@ -68,25 +66,24 @@
       <a href="project_list.html">후원하기</a>
       <a href="create.html">등록하기</a>
       <a href="about.html">About</a>
-      <button onclick="logout()">로그아웃</button>
+      <a href="login.html">로그인</a>
     </nav>
   </header>
 
   <main>
-    <h2 style="text-align:center;margin-bottom:1rem;">로그인</h2>
-    <form onsubmit="event.preventDefault(); login();">
-      <input type="email" id="email" placeholder="이메일" required>
-      <input type="password" id="password" placeholder="비밀번호" required>
-      <button type="submit">로그인</button>
-    </form>
+    <h2>최신 프로젝트</h2>
+    <div id="project-list" class="grid"></div>
   </main>
 
-  <footer style="margin-top:3rem; padding:2rem; background:#fafafa; text-align:center; font-size:0.9rem; color:#666;">
+  <footer>
     <p>© 2025 Project.PAW</p>
     <p>
       <a href="about.html">About</a> | 
       <a href="login.html">로그인</a>
     </p>
   </footer>
+
+  <!-- Firebase + Project List -->
+  <script type="module" src="./js/project_list.js"></script>
 </body>
 </html>
