--- a/index.html
+++ b/index.html
@@ -1,73 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project.PAW</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Project.PAW — 법인 없는 첫 후원 플랫폼</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
   <style>
-    body { margin: 0; font-family: "Noto Sans KR", sans-serif; background: #fff; color: #333; }
-    header {
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 1rem 2rem; background: #ffffff; border-bottom: 1px solid #eee;
-      position: sticky; top: 0; z-index: 10;
-    }
-    nav { display: flex; gap: 1rem; }
-    nav a, nav button {
-      background: none; border: none; cursor: pointer;
-      font-size: 1rem; color: #333; text-decoration: none; transition: color 0.2s;
-    }
-    nav a:hover, nav button:hover { color: #ff6b6b; }
-    main { padding: 2rem; max-width: 900px; margin: auto; }
-    section { margin-bottom: 3rem; }
-    h2 { margin-bottom: 1rem; }
-    #project-list {
-      display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-    .project-card {
-      border: 1px solid #eee; border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      padding: 1rem; background: #fafafa;
-    }
-    .project-card img {
-      max-width: 100%; border-radius: 8px; margin-bottom: 0.5rem;
-    }
+    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
+    .hero { text-align:center; padding:100px 20px; background:linear-gradient(135deg,#fff 0%,#fef9f9 50%,#f5f7ff 100%); }
+    .hero h1 { font-size:2rem; font-weight:900; margin-bottom:14px; }
+    .hero p { font-size:1.1rem; color:#555; margin-bottom:20px; }
+    .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
+    .btn.primary { background:#111; color:#fff; }
+    .btn.secondary { background:#fff; border:1px solid #ddd; color:#111; }
+    .projects { max-width:1040px; margin:50px auto; padding:0 16px; }
+    .projects h2 { font-size:1.4rem; font-weight:700; margin-bottom:16px; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px; }
+    .card { background:#fff; border:1px solid #eee; border-radius:14px; padding:14px; display:flex; flex-direction:column; gap:10px; transition:all .2s; }
+    .card:hover { box-shadow:0 4px 10px rgba(0,0,0,0.05); transform:translateY(-2px); }
+    .card img { width:100%; height:180px; object-fit:cover; border-radius:10px; }
+    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
+    .muted { color:#777; font-size:.9rem; }
+    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🐾 Project.PAW</h1>
-    <nav>
-      <a href="index.html">홈</a>
-      <a href="project_list.html">후원하기</a>
-      <a href="create.html">등록하기</a>
-      <a href="about.html">About</a>
-      <a href="login.html">로그인</a>
-    </nav>
-  </header>
+  <div data-include="header"></div>
 
-  <main>
-    <section id="intro">
-      <h2>환영합니다 🐾</h2>
-      <p>Project.PAW는 구조 동물들을 위한 프로젝트 후원 플랫폼입니다.</p>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>법인 없는 첫 후원 플랫폼</h1>
+    <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
+       PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>을 통해 연결됩니다.</p>
+    <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+    <a href="create.html" class="btn secondary">등록하기</a>
+  </section>
 
-    <section id="projects">
-      <h2>진행 중인 프로젝트</h2>
-      <div id="project-list"></div>
-    </section>
-  </main>
+  <!-- Projects Section -->
+  <section class="projects">
+    <h2>진행 중인 프로젝트</h2>
+    <div id="projects-grid" class="grid">
+      <div class="muted">불러오는 중...</div>
+    </div>
+  </section>
 
-  <footer style="margin-top:3rem; padding:2rem; background:#fafafa; text-align:center; font-size:0.9rem; color:#666;">
-    <p>© 2025 Project.PAW</p>
-    <p>
-      <a href="about.html">About</a> | 
-      <a href="login.html">로그인</a>
-    </p>
-  </footer>
+  <div data-include="footer"></div>
 
-  <!-- 🔥 프로젝트 목록 JS 불러오기 -->
-  <script type="module" src="./js/project_list.js"></script>
+  <script type="module">
+    import { injectLayout } from './js/include.js';
+    import { apiListProjects } from './js/api.js';
+
+    injectLayout({ active:'home' });
+
+    const $grid = document.getElementById('projects-grid');
+
+    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+
+    async function render(){
+      try {
+        const list = await apiListProjects({ status:'approved', limit:12 });
+        if(!list.length){
+          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          return;
+        }
+        $grid.innerHTML = list.map(p => `
+          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
+            <img src="${(p.representativeImageUrl || p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg')}" alt=""/>
+            <h3>${p.name ?? '(이름 없음)'}</h3>
+            <div class="muted">${p.summary ?? ''}</div>
+            <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
+          </a>
+        `).join('');
+      } catch (e) {
+        console.error(e);
+        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+      }
+    }
+
+    render();
+  </script>
 </body>
 </html>
